# k8s-research

./: .gitignore  DataFrameTest.ipynb  README.md  cli.py  find-replace.md  pyproject.toml
data_analyze/: lda.html  lda_test.ipynb
data_mgmt/: main.py
datasources/: k8s_scrape.db  kubernetes-1.csv  kubernetes-10.csv  kubernetes-11.csv  kubernetes-2.csv  kubernetes-3.csv  kubernetes-4.csv  kubernetes-5.csv  kubernetes-6.csv  kubernetes-7.csv  kubernetes-8.csv  kubernetes-9.csv  kubernetes.csv
datasources/lda_models/lda1/: model.gensim  model.gensim.expElogbeta.npy  model.gensim.state
datasources/lda_models/lda2/: model.gensim  model.gensim.expElogbeta.npy  model.gensim.id2word  model.gensim.state
k8s_scrape/: dataset.py  export.py  headers.py  main.py  stackoverflow.py  test.csv
k8s_scrape/export/: export.py  merge.py  mysql_models.py  relation.py  sqlite_models.py
k8s_scrape/interactions/: interactions.py
k8s_scrape/models/: mysql.py  sqlite.py
