[tool.poetry]
name = "k8s-scrape"
version = "0.1.0"
description = ""
authors = ["Alex Curtis <jacurtis@hey.com>"]
readme = "README.md"
packages = [{include = "k8s_scrape"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
beautifulsoup4 = "^4.12.2"
selenium = "^4.10.0"
click = "^8.1.6"
peewee = "^3.16.3"
pymysql = "^1.1.0"
nltk = "^3.8.1"
spacy = "^3.6.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
